2008-05-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (set-current-child)
	(adapt-child-to-parent, show-child, hide-child): Handle the case
	where child is not a frame or a window.

	* src/clfswm-util.lisp
	(mouse-click-to-focus-generic,mouse-focus-move/resize-generic):
	Check if child is a frame.

	* src/clfswm-internal.lisp (managed-window-p): Handle the case
	where frame is null.
	(place-frame): Check if frame and parent are frames.

	* src/clfswm-info.lisp (info-mode): display all frame info before
	leaving.

	* src/clfswm-second-mode.lisp (second-key-mode): display all frame
	info before leaving.

	* src/clfswm-internal.lisp (display-all-frame-info): New function.

2008-05-02  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/tools.lisp (getenv): Implemented for ECL.
	(urun-prog): Implemented for ECL.

	* src/clfswm-util.lisp (identify-key): Use a double buffer to
	display text.

	* src/clfswm-query.lisp (query-string): Use a double buffer to
	display text.

	* src/clfswm-info.lisp (draw-info-window): Use a double buffer to
	display text.

	* src/xlib-util.lisp (clear-pixmap-buffer, copy-pixmap-buffer):
	New functions.

2008-05-01  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-info.lisp (info-mode): Add boundaries in the info mode window.

	* src/menu-def.lisp: New file: move all menu definition in
	menu-def.lisp.

	* src/clfswm-layout.lisp (register-layout): Use a function instead
	of a macro.

2008-04-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-autodoc.lisp (produce-menu-doc,
	(produce-menu-doc-html): New functions.
	(produce-doc-*): Moved to clfswm-autodoc.lisp.

	* src/clfswm-util.lisp (paste-selection-no-clear): Prevent to
	paste a child on one of its own children. (this prevent a
	recursive bug).
	(move-child-to): Rename move/copy-current-child-by to
	move/copy-child-to.
	(mouse-move-window-over-frame): New function to move the window
	under the mouse cursor to another frame.
