@@ -610,6 +610,39 @@
           
         </td>
         <td align="center" nowrap>
+          P
+        </td>
+        <td style="color:#0000ff" nowrap>
+          Open the frame pack menu
+        </td>
+      </tr>
+      <tr>
+        <td align="right" style="color:#ff0000" nowrap>
+          
+        </td>
+        <td align="center" nowrap>
+          L
+        </td>
+        <td style="color:#0000ff" nowrap>
+          Open the frame fill menu
+        </td>
+      </tr>
+      <tr>
+        <td align="right" style="color:#ff0000" nowrap>
+          
+        </td>
+        <td align="center" nowrap>
+          R
+        </td>
+        <td style="color:#0000ff" nowrap>
+          Open the frame resize menu
+        </td>
+      </tr>
+      <tr>
+        <td align="right" style="color:#ff0000" nowrap>
+          
+        </td>
+        <td align="center" nowrap>
           I
         </td>
         <td style="color:#0000ff" nowrap>
@@ -1467,7 +1500,7 @@
           
         </td>
         <td align="center" nowrap>
-          Motion
+          Clfswm  motion
         </td>
         <td style="color:#0000ff" nowrap>
           Grab text
