@@ -1,3 +1,7 @@
+2008-05-05  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* doc/dot-clfswmrc: Update to  follow the new clfswm way.
+
 2008-05-03  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-internal.lisp (set-current-child)
